--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 <form>
 	<input type="text" id="you" name="you" placeholder="your name"/>
-	<br>
+<!-- 	<br>
 	<input type="text" id="mom" name="mom" placeholder="your mom's name"/> 
 	
 	<input type="text" id="dad" name="dad" placeholder="your dad's name"/>
 	<br>
 	<input type="text" id="sister" name="sister" placeholder="your sister's name"/>
-	<input type="text" id="brother" name="brother" placeholder="your brother's name"/>
+	<input type="text" id="brother" name="brother" placeholder="your brother's name"/> -->
 
 	<input type="button" onclick="addName()" value="Submit"/>
 </form>
@@ -30,12 +30,7 @@
 <div id="brotherName"></div>
 
 
-<p id="start"></p>
 
-<script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
   <script src="scripts/app.js"></script>
 </body>
 </html>
