function working with multiple values

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 <form>
 	<input type="text" id="you" name="you" placeholder="your name"/>
-<!-- 	<br>
+	<br>
 	<input type="text" id="mom" name="mom" placeholder="your mom's name"/> 
 	
 	<input type="text" id="dad" name="dad" placeholder="your dad's name"/>
 	<br>
 	<input type="text" id="sister" name="sister" placeholder="your sister's name"/>
-	<input type="text" id="brother" name="brother" placeholder="your brother's name"/> -->
+	<input type="text" id="brother" name="brother" placeholder="your brother's name"/>
 
 	<input type="button" onclick="addName()" value="Submit"/>
 </form>
